# jet_tagging_tda

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/jet_tagging/: config.py  plotting.py  utils.py
src/jet_tagging/data/: datasets.py  download.py  merge_datasets.py  preprocess.py
src/jet_tagging/features/: persistence_images.py  topology.py
src/jet_tagging/models/: cnn.py  evaluate.py  train_cnn.py
src/jet_tagging/pipelines/: compute_persistence_images.py  compute_topology.py  training.py
